# llm-code-sdk

./: CLAUDE.md  Cargo.toml  README.md
crates/pty/: Cargo.toml
examples/: smart_demo.rs
src/: error.rs  lib.rs
src/client/: messages.rs  mod.rs  models.rs  throughput.rs
src/e2e/: browser.rs  mod.rs  tools.rs
src/lcs/: daemon.rs  hugo.rs  ipfs_ha.rs  jetpack.rs  mod.rs  site.rs
src/skills/: agent_skills.rs  mod.rs
src/streaming/: events.rs  mod.rs  stream.rs
src/tools/: function_tool.rs  mcp.rs  mod.rs  registry.rs  runner.rs  screen.rs  search.rs  standard.rs  survey.rs  tasks.rs  terminal.rs  traits.rs
src/tools/smart/: adaptive.rs  ask_code.rs  ast.rs  benchmark.rs  call_graph.rs  cfg.rs  complexity.rs  context.rs  dfg.rs  examples.rs  examples_tool.rs  layers.rs  lean_graph.rs  mod.rs  mr_search.rs  pdg.rs  query.rs  read_tracker.rs  smart_read.rs  smart_write.rs  transaction.rs
src/types/: content_block.rs  message.rs  message_params.rs  mod.rs  openai.rs  openai_responses.rs  tool.rs  usage.rs
tests/: bash_bg_test.rs  integration_zai.rs  pty_smoke.rs  python_comparison.py  terminal_test.rs
