[workspace]
members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Riff Labs <hello@riff.cc>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
futures = { version = "0.3", default-features = false }
glob = "0.3"
playwright-rs = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[package]
name = "llm-code-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A Rust SDK for LLM APIs with agentic tool use capabilities"
repository = "https://github.com/riffcc/llm-code-sdk"
readme = "README.md"
keywords = ["anthropic", "claude", "llm", "ai", "sdk"]
categories = ["api-bindings", "asynchronous"]

# Attribution: This SDK is inspired by and derives patterns from
# anthropic-sdk-python (MIT Licensed) by Anthropic, PBC.
# https://github.com/anthropics/anthropic-sdk-python

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
glob.workspace = true
libc = "0.2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

# Optional search support (MiniRust Search)
minirust-search = { git = "https://github.com/riffcc/minirust-search.git", rev = "1edaaca3102366bfd9daf4ba4d754353d3c09914", optional = true }

# Optional smart tools (layercake analysis)
tree-sitter = { version = "0.26", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-perl = { version = "1.1", optional = true }
tree-sitter-nim = { git = "https://github.com/riffcc/tree-sitter-nim.git", rev = "1fbd0b4017019981294f5fd7bac584e82ba188e2", optional = true }
tree-sitter-lean = { git = "https://github.com/riffcc/tree-sitter-lean.git", rev = "8c4fa06ae0ac526d66d2276997c6c5de61343f44", optional = true }

# Optional E2E testing support
playwright-rs = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
dotenvy.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
search = ["minirust-search"]
smart = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript", "tree-sitter-go", "tree-sitter-perl", "tree-sitter-nim", "tree-sitter-lean"]
e2e = ["playwright-rs", "base64"]

[[example]]
name = "smart_demo"
required-features = ["smart"]
